2005-08-08  Petr Mikulik  <mikulik@physics.muni.cz>

	* demo/datastrings.dem demo/epslatex.dem demo/histograms.dem
	demo/layout.dem demo/pm3d.dem: Update for "set tics scale".

2005-08-07  Ethan Merritt  <merritt@u.washington.edu>

	* src/gplt_x11.c: Do away with special (GC *)gc_pm3d; use the same gc
	for all normal plots elements except pattern fill. Tweak the algorithm
	for text rotation as suggested long ago by Dave Denholm. The default
	method should now work on all TrueColor or DirectColor displays. The
	X resource "gnuplot*fastrotate: off" still allows fall-back to a slower
	but guaranteed algorithm if necessary.  Fixes bug #1251193.

2005-08-07  Petr Mikulik  <mikulik@physics.muni.cz>

	Let PM3D be always compiled in. Thus, this patch removes all constructs
	#if(n)def PM3D and does a necessary code clean-up.

	Files changed:

	configure.in 

	config/(11 files) config.amg config.cyg config.mgw config.os2 config.wc
	makefile.cyg makefile.mgw makefile.nt makefile.os2 makefile.oww
	makefile.win

	demo/world2.dem

	src/(37 files) axis.c axis.h color.c color.h command.c contour.c
	datafile.c gadgets.c gadgets.h getcolor.c getcolor.h gplt_x11.c
	gplt_x11.h gp_types.h graph3d.c graph3d.h graphics.c graphics.h
	hidden3d.c misc.c misc.h mouse.c plot2d.c plot3d.c plot.c pm3d.c save.c
	set.c setshow.h show.c tables.c tables.h term_api.h term.c unset.c
	util3d.c util3d.h

	src/os2/gclient.c src/os2/pm_msgs.h

	src/win/wgraph.c

	term/(22 files) README aquaterm.trm cgm.trm dumb.trm emf.trm
	estimate.trm fig.trm gd.trm ggi.trm metapost.trm mif.trm pdf.trm pm.trm
	post.trm pslatex.trm pstricks.trm svg.trm tgif.trm vgagl.trm win.trm
	x11.trm xlib.trm

2005-08-06  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/set.c (set_tics): Fix non-ANSI ordering of declaration.

2005-08-06  Ethan Merritt  <merritt@u.washington.edu>

	* src/color.c: Remove C++ style comments.

	* src/gplt_x11.c: Replace non-standard type caddr_t with XPointer.
