@@ -1,3 +1,9 @@
+2005-08-08  Bastian Maerkisch  <bmaerkisch@web.de>
+
+	* src/gp_hist.h src/history.c src/plot.c src/plot.h src/set.c src/show.c
+	src/unset.c: Move variable gnuplot_history_size from plot.h to
+	gp_hist.h.
+
 2005-08-08  Petr Mikulik  <mikulik@physics.muni.cz>
 
 	* demo/datastrings.dem demo/epslatex.dem demo/histograms.dem
